# fcc_reporting

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  deployment.yaml  loadbalancer.yaml
files/: start
src/: analysis.rs  emerald.rs  fcc.rs  lib.rs  reports.rs
src/routes/: focus.rs  mod.rs  reports.rs
static/: index.css  index.html  index.js
