[package]
name = "fcc_reporting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { version = "0.15.7", features = ["cli"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = { version = "1.0.164", features = ["derive"] }
