[package]
name = "fcc_reporting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
dotenvy = { version = "0.15.7", features = ["cli"] }
encoding_rs = "0.8.32"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4"] }
